--- a/index.html
+++ b/index.html
@@ -33,15 +33,14 @@
                               <p style="text-align:center">
                                  <name>Gustavo A. Salazar-Gomez</name>
                               </p>
-                              <p>I am a Mechatronics Engineer looking for a thrilling MSc related to Robotics, Intelligent control systems or Artificial intelligence where I can work and research in topics such as Mobile robotics, Aerospace, Computer vision, Machine learning and Deep learning. 
-                                 Also, I am in the last semester of a Postgraduate Diploma in Artificial Intelligence at <a href="https://www.uao.edu.co/">Universidad Autonoma de Occidente (UAO)</a>. 
+                              <p>I am a Mechatronics Engineer with a Postgraduate Diploma in Artificial Intelligence from <a href="https://www.uao.edu.co/">Universidad Autonoma de Occidente (UAO)</a>, mainly interested in topics related to Mobile Robotics, Intelligent control systems, Artificial intelligence, Aerospace, Computer vision, Machine learning and Deep learning. 
+                                 
                               </p>
                               <p>
                                  My BEng <a href="https://red.uao.edu.co/handle/10614/10153">degree project</a> was entitled “Object recognition in images using deep learning” where I used transfer learning in order to retrain the last layers of inception-v3 neural network and created new categories from a specific environment under the supervision of <a href="https://scholar.google.com/citations?user=7PIjh_MAAAAJ&hl=en"> Jesus Alfonso Lopez</a> at UAO.  
                               </p>
                               <p>
-                                 Currently, I’m working as Product specialist at Open International, being part of the support team as First level engineer where I’m in charge of technical and functional duties, working side by side and supporting our customer in tasks related to the configuration 
-                                 and parameterization of the product, incidents management, diagnosis and developing solutions to new requirements.
+                                 Currently, I’m a MSc student in Mobile, Autonomous and Robotic Systems at <a href="https://ense3.grenoble-inp.fr/">Grenoble INP</a>.
                               </p>
                               <p>
                                  Email: gustavo [dot] salazar [at] uao [dot] edu [dot] co
