--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                               <p style="text-align:center">
                                  <name>Gustavo A. Salazar-Gomez</name>
                               </p>
-                              <p>I am a Mechatronics Engineer with a Postgraduate Diploma in Artificial Intelligence from <a href="https://www.uao.edu.co/">Universidad Autonoma de Occidente (UAO)</a>, mainly interested in topics related to Mobile Robotics, Intelligent control systems, Artificial intelligence, Aerospace, Computer vision, Machine learning and Deep learning. 
+                              <p>I am a Mechatronics Engineer with a Postgraduate Diploma in Artificial Intelligence from <a href="https://www.uao.edu.co/">Universidad Autonoma de Occidente (UAO)</a>, mainly interested in topics related to Mobile Robotics, Intelligent control systems, Artificial intelligence, Navigation, Aerospace, Computer vision, Machine learning and Deep learning. 
                                  
                               </p>
                               <p>
