--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                                  <div class="two" id='gan_image'>
                                     <img src='images/gan.gif' width="160">
                                  </div>
-                                 <img src='images/gan_img.png' width="160">
+                                 <img src='images/img_gan.png' width="160">
                               </div>
                               <script type="text/javascript">
                                  function gan_start() {
@@ -369,7 +369,7 @@
                               <br>
                               <a href="https://github.com/gsg213/Computer_Vision_DL/tree/master/GAN">code</a>
                               <p></p>
-                              <p>Generative Adversarial Networks used to generate cars images from CIFAR10, trained with GPU on Colab.</p>
+                              <p>Generative Adversarial Networks(GAN) used to generate cars images from CIFAR10, trained with GPU on Colab.</p>
                            </td>
                         </tr>                        
                         <tr onmouseout="lbp_stop()" onmouseover="lbp_start()">
