--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                               <br>
                               <a>description</a> 
                               <p></p>
-                              <p>A transfer learning technique is used to create a computational tool that recognizes the objects of the automatic laboratory of the Universidad Autónoma de Occidente in real time. The Inception-V3 is used as a pre-trained CNN.</p>
+                              <p>A transfer learning technique is used to create a computational tool that recognizes the objects of the automatics laboratory of the Universidad Autónoma de Occidente in real time. The Inception-V3 is used as a pre-trained CNN.</p>
                            </td>
                         </tr>
                         <tr onmouseout="dsp_stop()" onmouseover="dsp_start()">
@@ -195,7 +195,7 @@
                               <br>
                               <a>description</a> 
                               <p></p>
-                              <p>The Inception-V3 is used as a feature extractor on the images and on the other hand a softmax classifier is trained, this contains the classes that are going to be recognized. It was used Tensorflow platform with GPU in Python.</p>
+                              <p>The Inception-V3 is used as a feature extractor and a softmax classifier is trained from scratch, this contains the new classes that are going to be recognized. It was used Tensorflow framework with GPU in Python.</p>
                            </td>
                         </tr>
                         <!--
