--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                                  My BEng <a href="https://red.uao.edu.co/handle/10614/10153">degree project</a> was entitled “Object recognition in images using deep learning” where I used transfer learning in order to retrain the last layers of inception-v3 neural network and created new categories from a specific environment under the supervision of <a href="https://scholar.google.com/citations?user=7PIjh_MAAAAJ&hl=en"> Jesus Alfonso Lopez</a> at UAO.  
                               </p>
                               <p>
-                                 Currently, I’m a MSc student in Mobile, Autonomous and Robotic Systems at <a href="https://ense3.grenoble-inp.fr/">Grenoble INP</a>.
+                                 Currently, I’m a MSc student in Mobile, Autonomous and Robotic Systems at <a href="https://ense3.grenoble-inp.fr/">Grenoble INP</a>, doing an intership at INRIA's <a href="https://team.inria.fr/chroma/">Chroma lab</a>.
                               </p>
                               <p>
-                                 Email: gustavo [dot] salazar [at] uao [dot] edu [dot] co
+                                 Email: gustavo [dot] salazar [at] grenoble-inp [dot] org
                               <p style="text-align:center">
                                  <a href="https://github.com/gsg213">Github</a> &nbsp/&nbsp
                                  <a href="https://scholar.google.com/citations?hl=es&user=watU8NkAAAAJ">Google Scholar</a> &nbsp/&nbsp
@@ -65,6 +65,9 @@
                            <td style="padding:20px;width:100%;vertical-align:middle">
                               <heading>News</heading>
                               <ul>
+                                 <li> 
+                                    <strong>[March 2022]</strong> Started an internship at INRIA's <a href="https://team.inria.fr/chroma/">Chroma lab</a>, exploring sensor fusion techniques for robust situational awareness fro Autonomous Vehicles.
+                                 </li>
                                  <li> 
                                     <strong>[Sept 2021]</strong> Started a MSc in Mobile, Autonomous and Robotic Systems at <a href="https://ense3.grenoble-inp.fr/">Grenoble INP</a>.
                                  </li>
