--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                               <heading>News</heading>
                               <ul>
                                  <li> 
-                                    <strong>[March 2022]</strong> Started an internship at INRIA's <a href="https://team.inria.fr/chroma/">Chroma lab</a>, exploring sensor fusion techniques for robust situational awareness fro Autonomous Vehicles.
+                                    <strong>[March 2022]</strong> Started an internship at INRIA's <a href="https://team.inria.fr/chroma/">Chroma lab</a>, exploring sensor fusion techniques for robust situational awareness for Autonomous Vehicles.
                                  </li>
                                  <li> 
                                     <strong>[Sept 2021]</strong> Started a MSc in Mobile, Autonomous and Robotic Systems at <a href="https://ense3.grenoble-inp.fr/">Grenoble INP</a>.
