--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                               <heading>News</heading>
                               <ul>
                                  <li> 
+                                    <strong>[September 2022]</strong> Defended my Master thesis "Transformer-based Lidar-RGB Fusion for Semantic Grid Prediction in Autonomous Vehicles" performed at INRIA's <a href="https://team.inria.fr/chroma/">Chroma lab</a>.
+                                 </li>
+                                 <li> 
                                     <strong>[March 2022]</strong> Started an internship at INRIA's <a href="https://team.inria.fr/chroma/">Chroma lab</a>, exploring sensor fusion techniques for robust situational awareness for Autonomous Vehicles.
                                  </li>
                                  <li> 
