--- a/index.html
+++ b/index.html
@@ -33,22 +33,17 @@
                               <p style="text-align:center">
                                  <name>Gustavo A. Salazar-Gomez</name>
                               </p>
-                              <p>I am a Mechatronics Engineer with a Postgraduate Diploma in Artificial Intelligence from <a href="https://www.uao.edu.co/">Universidad Autonoma de Occidente (UAO)</a>, mainly interested in topics related to Mobile Robotics, Intelligent control systems, Artificial intelligence, Navigation, Aerospace, Computer vision, Machine learning and Deep learning. 
-                                 
+                              <p>Im a PhD student at <a href="https://www.univ-grenoble-alpes.fr/">Universite Grenoble Alpes</a>, under the supervison of Anne Spalanzani and Christian Laugier. I work at INRIA's <a href="https://team.inria.fr/chroma/">Chroma lab</a>, where I focus my research in AI-driven algorithms for safe motion planning and driving decision-making in the context of autonomous driving.
                               </p>
+                              <p>Also, I completed a MSc in Mobile, Autonomous and Robotic Systems at <a href="https://ense3.grenoble-inp.fr/">Grenoble INP</a> in 2022, before that, a Postgraduate Diploma in Artificial Intelligence in 2021 and BEng as Mechatronics Engineer in 2018 from <a href="https://www.uao.edu.co/">Universidad Autonoma de Occidente (UAO)</a>.
+                              </p>                                                    
                               <p>
-                                 My BEng <a href="https://red.uao.edu.co/handle/10614/10153">degree project</a> was entitled “Object recognition in images using deep learning” where I used transfer learning in order to retrain the last layers of inception-v3 neural network and created new categories from a specific environment under the supervision of <a href="https://scholar.google.com/citations?user=7PIjh_MAAAAJ&hl=en"> Jesus Alfonso Lopez</a> at UAO.  
-                              </p>
-                              <p>
-                                 Currently, I’m a MSc student in Mobile, Autonomous and Robotic Systems at <a href="https://ense3.grenoble-inp.fr/">Grenoble INP</a>, doing an intership at INRIA's <a href="https://team.inria.fr/chroma/">Chroma lab</a>.
-                              </p>
-                              <p>
-                                 Email: gustavo [dot] salazar [at] grenoble-inp [dot] org
+                                 Email: gustavo [hyphen] andres [dot] salazar [hyphen] gomez [at] univ [hyphen] grenoble [hyphen] alpes [dot] fr
                               <p style="text-align:center">
                                  <a href="https://github.com/gsg213">Github</a> &nbsp/&nbsp
                                  <a href="https://scholar.google.com/citations?hl=es&user=watU8NkAAAAJ">Google Scholar</a> &nbsp/&nbsp
                                  <a href="https://www.linkedin.com/in/gustavo-salazar-gomez/">Linkedin</a> &nbsp/&nbsp
-                                 <a href="mailto:gustavo.salazar@uao.edu.co">Email</a> &nbsp/&nbsp
+                                 <a href="mailto:gustavo-andres.salazar-gomez@univ-grenoble-alpes.fr">Email</a> &nbsp/&nbsp
                                  <a href="data/Gustavo_A_Salazar_Gomez.pdf">CV</a>
                               </p>
                            </td>
@@ -65,6 +60,18 @@
                            <td style="padding:20px;width:100%;vertical-align:middle">
                               <heading>News</heading>
                               <ul>
+                                 <li> 
+                                    <strong>[June 2024]</strong> Presented the paper <a href="https://ieeexplore.ieee.org/abstract/document/10588460">"TLCFuse: Temporal Multi-Modality Fusion Towards Occlusion-Aware Semantic Segmentation"</a> at <a href="https://ieee-iv.org/">2024 IEEE Intelligent Vehicles Symposium (IV)</a> in Jeju, South Korea.
+                                 </li>                                 
+                                 <li> 
+                                    <strong>[January 2024]</strong> Started my PhD studies at <a href="https://www.univ-grenoble-alpes.fr/">Universite Grenoble Alpes</a> and <a href="https://team.inria.fr/chroma/">INRIA</a>, under the supervison of Anne Spalanzani and Christian Laugier.
+                                 </li> 
+                                 <li> 
+                                    <strong>[December 2022]</strong> Presented the paper <a href="https://ieeexplore.ieee.org/abstract/document/10588460">"TransFuseGrid: Transformer-based Lidar-RGB fusion for semantic grid prediction"</a> at 2022 17th International Conference on Control, Automation, Robotics and Vision (ICARCV).
+                                 </li>                                 
+                                 <li> 
+                                    <strong>[October 2022]</strong> Started a new position as Research Engineer at INRIA's <a href="https://team.inria.fr/chroma/">Chroma lab</a>, where I focused  my research in multi-modal sensor fusion in for autonmous driving.
+                                 </li>
                                  <li> 
                                     <strong>[September 2022]</strong> Defended my Master thesis "Transformer-based Lidar-RGB Fusion for Semantic Grid Prediction in Autonomous Vehicles" performed at INRIA's <a href="https://team.inria.fr/chroma/">Chroma lab</a>.
                                  </li>
