--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                                     <strong>[January 2024]</strong> Started my PhD studies at <a href="https://www.univ-grenoble-alpes.fr/">Universite Grenoble Alpes</a> and <a href="https://team.inria.fr/chroma/">INRIA</a>, under the supervison of Anne Spalanzani and Christian Laugier.
                                  </li> 
                                  <li> 
-                                    <strong>[December 2022]</strong> Presented the paper <a href="https://ieeexplore.ieee.org/abstract/document/10588460">"TransFuseGrid: Transformer-based Lidar-RGB fusion for semantic grid prediction"</a> at 2022 17th International Conference on Control, Automation, Robotics and Vision (ICARCV).
+                                    <strong>[December 2022]</strong> Presented the paper <a href="https://ieeexplore.ieee.org/abstract/document/10004276">"TransFuseGrid: Transformer-based Lidar-RGB fusion for semantic grid prediction"</a> at 2022 17th International Conference on Control, Automation, Robotics and Vision (ICARCV).
                                  </li>                                 
                                  <li> 
-                                    <strong>[October 2022]</strong> Started a new position as Research Engineer at INRIA's <a href="https://team.inria.fr/chroma/">Chroma lab</a>, where I focused  my research in multi-modal sensor fusion in for autonmous driving.
+                                    <strong>[October 2022]</strong> Started a new position as Research Engineer at INRIA's <a href="https://team.inria.fr/chroma/">Chroma lab</a>, where I focused  my research in multi-modal sensor fusion for autonmous driving.
                                  </li>
                                  <li> 
                                     <strong>[September 2022]</strong> Defended my Master thesis "Transformer-based Lidar-RGB Fusion for Semantic Grid Prediction in Autonomous Vehicles" performed at INRIA's <a href="https://team.inria.fr/chroma/">Chroma lab</a>.
@@ -106,6 +106,43 @@
                      <tbody>
                         <td style="padding:20px;width:25%;vertical-align:middle">
                            <heading>Publications</heading>
+                           <tr onmouseout="tfg_stop()" onmouseover="tfg_start()">
+                           <td style="padding:20px;width:25%;vertical-align:middle">
+                              <div class="one">
+                                 <div class="two" id='dtl_image'>
+                                    <img src='images/image_fuente.png' width="160">
+                                 </div>
+                                 <img src='images/image_plc.png' width="160">
+                              </div>
+                              <script type="text/javascript">
+                                 function tfg_start() {
+                                   document.getElementById('dtl_image').style.opacity = "1";
+                                 }
+                                 
+                                 function tfg_stop() {
+                                   document.getElementById('dtl_image').style.opacity = "0";
+                                 }
+                                 dtl_stop()
+                              </script>
+                           </td>
+                           <td style="padding:20px;width:75%;vertical-align:middle">
+                              <a href="https://ieeexplore.ieee.org/abstract/document/10004276">
+                                 <papertitle>TransFuseGrid: Transformer-based Lidar-RGB fusion for semantic grid prediction</papertitle>
+                              </a>
+                              <br>
+                              <strong>Gustavo A. Salazar-Gomez</strong>,
+                              David Sierra-Gonzalez,
+                              Manuel Diaz-Zapata,
+                              Anshul Paigwar,
+                              Wenqian Liu, 
+                              Ozgur Erkent,                             
+                              Christian Laugier
+                              <br>
+                              <a href="https://ieeexplore.ieee.org/abstract/document/10004276">Paper</a> 
+                              <p></p>
+                              <p> In this work, we presented an approach for semantic grid prediction that uses a transformer architecture to fuse Lidar sensor data with RGB images from multiple cameras to predict semantic grids of the ego vehicle's environment. </p>
+                           </td>
+                        </tr>                  
                         <tr onmouseout="ml3d_stop()" onmouseover="ml3d_start()">
                            <td style="padding:20px;width:25%;vertical-align:middle">
                               <div class="one">
