--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                               <p style="text-align:center">
                                  <name>Gustavo A. Salazar-Gomez</name>
                               </p>
-                              <p>Im a PhD student at <a href="https://www.univ-grenoble-alpes.fr/">Universite Grenoble Alpes</a>, under the supervison of Anne Spalanzani and Christian Laugier. I work at INRIA's <a href="https://team.inria.fr/chroma/">Chroma lab</a>, where I focus my research in AI-driven algorithms for safe motion planning and driving decision-making in the context of autonomous driving.
+                              <p>I'm a PhD student at <a href="https://www.univ-grenoble-alpes.fr/">Universite Grenoble Alpes</a>, under the supervison of Anne Spalanzani and Christian Laugier. I work at INRIA's <a href="https://team.inria.fr/chroma/">Chroma lab</a>, where I focus my research in AI-driven algorithms for safe motion planning and driving decision-making in the context of autonomous driving.
                               </p>
                               <p>Also, I completed a MSc in Mobile, Autonomous and Robotic Systems at <a href="https://ense3.grenoble-inp.fr/">Grenoble INP</a> in 2022, before that, a Postgraduate Diploma in Artificial Intelligence in 2021 and BEng as Mechatronics Engineer in 2018 from <a href="https://www.uao.edu.co/">Universidad Autonoma de Occidente (UAO)</a>.
                               </p>                                                    
