--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
                               </a>
                               <br>
                               <strong>Gustavo A. Salazar-Gomez</strong>,
-                              David Sierra-Gonzalez,
-                              Manuel Diaz-Zapata,
-                              Anshul Paigwar,
+                              David Sierra-Gonzalez, 
+                              Manuel Diaz-Zapata, 
+                              Anshul Paigwar, 
                               Wenqian Liu, 
                               Ozgur Erkent,                             
                               Christian Laugier
@@ -204,15 +204,15 @@
                               </a>
                               <br>
                               <strong>Gustavo Salazar</strong>,
-                              <a href="https://www.linkedin.com/in/miguel-a-saavedra-ruiz">Miguel Saavedra-Ruiz</a>
+                              <a href="https://www.linkedin.com/in/miguel-a-saavedra-ruiz">Miguel Saavedra-Ruiz</a>,
                               <a href="https://scholar.google.com.au/citations?user=x3M1JlAAAAAJ&hl=en">Victor Romero-Cano</a>
                               <br>
                               <em>LatinX Workshop at CVPR</em>, 2021 &nbsp <span style="color:#ff0000"><strong>(Poster Presentation)</strong></span> 
                               <br>
-                              <a href="https://github.com/MikeS96/3d_obj_detection">code</a> /
+                              <a href="https://github.com/MikeS96/3d_obj_detection">Code</a> /
                               <a href="https://arxiv.org/abs/2105.11060">arXiv</a> /
-                              <a href="https://research.latinxinai.org/papers/cvpr/2021/png/21_poster_21.png">poster</a> /   
-                              <a href="data/3dMachineLearning.txt">description</a> 
+                              <a href="https://research.latinxinai.org/papers/cvpr/2021/png/21_poster_21.png">Poster</a> /   
+                              <a href="data/3dMachineLearning.txt">Description</a> 
                               <p></p>
                               <p>3D object detection of vehicles in the NuScenes dataset using classic Machine learning such as DBSCAN and SVMs.</p>
                            </td>
@@ -246,11 +246,13 @@
                               <a href="https://www.linkedin.com/in/nicolas-diaz-salazar-792260137/">Nicolas Diaz</a>,
                               <a href="https://scholar.google.com/citations?user=7PIjh_MAAAAJ&hl=en">Jesus Alfonso Lopez</a>
                               <br>
-                              <a>description</a> 
+                              <a href="https://ieeexplore.ieee.org/document/8484856">Paper</a> /
+                              <a href="https://link.springer.com/chapter/10.1007/978-3-030-03023-0_2">Extended version in Springer CCIS</a>                              
                               <p></p>
                               <p>A transfer learning technique is used to create a computational tool that recognizes the objects of the automatics laboratory of the Universidad Autónoma de Occidente in real time. The Inception-V3 is used as a pre-trained CNN.</p>
                            </td>
                         </tr>
+                        <!--
                         <tr onmouseout="dsp_stop()" onmouseover="dsp_start()">
                            <td style="padding:20px;width:25%;vertical-align:middle">
                               <div class="one">
@@ -283,7 +285,7 @@
                               <p></p>
                               <p>The Inception-V3 is used as a feature extractor and a softmax classifier is trained from scratch, this contains the new classes that are going to be recognized. It was used Tensorflow framework with GPU in Python.</p>
                            </td>
-                        </tr>
+                        </tr> -->
                         <!--
                            <tr onmouseout="dals_stop()" onmouseover="dals_start()">
                              <td style="padding:20px;width:25%;vertical-align:middle">
